# GPT2_from_scratch

./: README.md  pyproject.toml
gpt2_from_scratch/: Block.py  CausalSelfAttention.py  DataLoader.py  GPT.py  GPTConfig.py  MLP.py  helper.py  train_gpt2.py
gpt2_from_scratch/log/: log.txt
notebooks/: play.ipynb  testing.ipynb
notebooks/.ipynb_checkpoints/: testing-checkpoint.ipynb
