[tool.poetry]
name = "gpt2-from-scratch"
version = "0.1.0"
description = ""
authors = ["Mkoek213 <mikolaj.kolek2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
transformers = "^4.45.1"
torch = "^2.4.1"
matplotlib = "^3.9.2"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
